# MobileRobots_Active_Perception

./: .gitignore  README.md
active_perception/: package.xml  setup.py
src/ORB_EKF/: README.md  build_orbslam3_backend.sh  install_orbslam3.sh  orbslam3_backend.cpp  orbslam3_ubuntu24.patch  package.xml  setup.cfg  setup.py
src/ORB_EKF/config/: ekf.yaml  orb_vo.yaml  orbslam3_stereo.yaml
src/ORB_EKF/launch/: orb_ekf.launch.py
src/ORB_EKF/orb_ekf/: fused_output_node.py  orb_vo_node.py
src/ORB_EKF/resource/: orb_ekf
src/active_perception/: CMakeLists.txt  odom_goal_driver.py  package.xml  setup.cfg  setup.py
src/active_perception/active_perception/: box_finder.py  confidence_evaluator.py  cylinder_finder.py  nbv_planner.py  odom_controller.py  odom_goal_driver.py  orchestrator.py  pose_estimator.py
src/active_perception/launch/: active_perception.py
src/active_perception/msg/: PoseEstimateSample.msg
src/active_perception/srv/: EvaluatePoseConfidence.srv  PlanNBV.srv
src/active_perception_interfaces/: CMakeLists.txt  package.xml
src/active_perception_interfaces/srv/: EvaluatePoseConfidence.srv
src/active_perception_navigation/: PR_DESCRIPTION.md  README.md  package.xml  setup.cfg  setup.py
src/active_perception_navigation/active_perception_navigation/: __init__.py  confidence_evaluator.py  nbv_planner.py  orchestrator.py  safety_monitor.py
src/active_perception_navigation/launch/: navigation_pipeline.launch.py
