<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orb_ekf</name>
  <version>0.1.0</version>
  <description>ORB-SLAM stereo VO with naïve average path fusion output.</description>
  <maintainer email="vikas@example.com">vikas</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>message_filters</depend>
  <depend>cv_bridge</depend>
  <!--
    ORB-SLAM backend is consumed as `orbslam3_backend` (Python module / .so library),
    loaded at runtime by orb_vo_node. It is not a standard ROS package dependency
    resolved by rosdep in this repository setup.
  -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
